--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
     </table>
     <br>
     <hr noshade>
-    <a href="2-hobbies.html">
+    <a href="hobbies.html">
         <h3>Hobbies</h3>
     </a>
-    <a href="3-contact.html">
+    <a href="contact.html">
         <h3>Contact</h3>
     </a>
 </body>
